[package]
name = "sudoku-pi"
description = "Finger-friendly Sudoku"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "lib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
identifier = "nl.couch-chilis.sudoku-pi"

[dependencies]
sudoku-lib = { path = "lib" }

[patch.crates-io]
bevy = { path = "../bevy" }
bevy_app = { path = "../bevy/crates/bevy_app" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
bevy_log = { path = "../bevy/crates/bevy_log" }
bevy_utils = { path = "../bevy/crates/bevy_utils" }
bevy_tweening = { path = "../bevy_tweening" }
#bevy-steamworks = { path = "../bevy-steamworks" }
winit = { path = "../winit" }
