[workspace]
members = ["android", "desktop", "lib"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
#bevy = { path = "../bevy" }
#bevy_framepace = { path = "../bevy_framepace" }
#bevy_tweening = { path = "../bevy_tweening" }
#bevy-steamworks = { path = "../bevy-steamworks" }
#winit = { path = "../winit" }
