[package]
name = "sudoku-pi-android"
description = "Finger-friendly Sudoku"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "sudoku_pi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "android_shared_stdcxx",
] }
sudoku-lib = { path = "../lib" }

[package.metadata.android]
package = "nl.couch_chilis.sudoku_pi"
apk_name = "sudokupi"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = [
    #"aarch64-linux-android",
    #"armv7-linux-androideabi",
    #"i686-linux-android",
    "x86_64-linux-android",
]
resources = "app/src/main/res"

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Sudoku Pi"
